--- a/SEOPostClient/src/SEOPostClient.mxml
+++ b/SEOPostClient/src/SEOPostClient.mxml
@@ -5,4 +5,7 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
+	<s:Label text="Test" />
+	
 </s:WindowedApplication>
